@@ -103,3 +103,9 @@ getJavaSpecificOpts() {
 
   echo $value
 }
+# Reflective access options
+addReflectiveAccessOptions() { 
+  CONTROL_JVM_OPTS+= "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED --add-exports=java.base/sun.nio.ch=ALL-UNNAMED --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED --illegal-access=warn"; }
+
+# Export the function
+export -f addReflectiveAccessOptions
